[package]
name = "raskd"
version = "0.1.0"
authors = ["LMJW <heysuperming@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rask"
path = "src/client/client.rs"

[lib]
name = "raskd"
path = "src/lib.rs"

[dependencies]
actix-web = "2"
actix-rt = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.22.0"
r2d2_sqlite = "0.15.0"
r2d2 = "0.8"
failure = "0.1.7"
futures = "0.3.1"
env_logger = "0.7.1"
chrono = "0.4"
clap = "2.33.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }