[package]
authors = ["LMJW <heysuperming@gmail.com>"]
edition = "2018"
name = "raskd"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rask"
path = "src/client/client.rs"

[lib]
name = "raskd"
path = "src/lib.rs"

[dependencies]
actix-web = "3"
chrono = "0.4"
clap = "2.33.3"
failure = "0.1.7"
futures = "0.3.16"
prettytable-rs = "0.8.0"
r2d2 = "0.8"
r2d2_sqlite = "0.18.0"
reqwest = {version = "0.11", features = ["blocking", "json"]}
rusqlite = "0.25.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
time = "0.2.27"
tracing = "0.1"
tracing-subscriber = "0.2"
